--- a/clean architecture/rick_and_morty/pubspec.yaml
+++ b/clean architecture/rick_and_morty/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   equatable: ^2.0.3
   dartz: ^0.10.1
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
