--- a/meditation_app/meditation_app/pubspec.yaml
+++ b/meditation_app/meditation_app/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  just_audio: ^0.9.20
+  just_audio_libwinmedia: ^0.0.4
+  font_awesome_flutter: ^10.1.0
 
 dev_dependencies:
   flutter_test:
@@ -58,9 +61,17 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - meditation_audios/forest.mp3
+    - meditation_audios/night.mp3
+    - meditation_audios/ocean.mp3
+    - meditation_audios/waterfall.mp3
+    - meditation_audios/wind.mp3
+    - meditation_images/forest.jpeg
+    - meditation_images/night.jpeg
+    - meditation_images/ocean.jpeg
+    - meditation_images/waterfall.jpeg
+    - meditation_images/wind.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
